<resources>
    <string name="app_name">Blickdiagnose</string>
    <string name="quick_start_button">Quick start</string>
    <string name="individual_start_button">Individual start</string>
    <string name="statistics_button">Statistics</string>
    <string name="settings_button">Settings</string>
    <string name="what_is_the_diagnosis">What is the diagnosis?</string>
    <string name="show_answer_button">Show answer</string>
    <string name="correct_answer_button">Correct</string>
    <string name="wrong_answer_button">Wrong</string>
    <string name="answer_textfield">Answer</string>
    <string name="author_of_this_file">Information about the author of this file:</string>
</resources>
